shop-eks/shop-eks/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: <ACCOUNT_ID>.dkr.ecr.<REGION>.amazonaws.com/shop-frontend:latest
          ports:
            - containerPort: 80
              name: http
