shop-eks/shop-eks/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: shop
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  type: ClusterIP
